# fpl_tools

./: .gitignore  README.md  TODO  pyproject.toml  requirements.txt  template.yaml
src/api/: fetch_fpl_data.py  main.py
src/api/router/v1/: difficulty.py  players.py  squad.py  teams.py
src/aws/: s3.py
src/cli/: cli.py
src/data/: __init__.py  fpl_data_fetcher.py  fpl_data_parser.py
src/data/model/: fantasy_player.py  fixture.py  player.py  season.py  squad.py  team.py
src/dynamo/: fpl_table.py
src/model/: draft.py  fantasy_player.py  fixture.py  player.py  season.py  squad.py  team.py
src/service/: difficulty_service.py  difficulty_service_2.py  fixture_service.py  team_service.py
src/service/test/: __init__.py  test_difficulty_service.py  test_fixture_service.py  test_team_service.py
test/: __init__.py
test/resources/: example_raw_data.json
test/test_api/mock_events/: mock_get_player.json  mock_get_team.json  mock_get_team_difficulty.json  mock_get_teams_difficulty.json
test/test_api/mock_events/squad/: mock_create_squad.json  mock_get_squad.json
test/test_data/: test_fpl_data_fetcher.py
test/test_model/: test_season.py  test_team.py
test/test_service/: test_difficulty_service.py
