[tool.poetry]
name = "fpl-tools"
version = "0.1.0"
description = ""
authors = ["Oliver Catling <ollicatling@gmail.com>"]
readme = "README.md"
packages = [{include = "fpl_tools"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
